--- a/scss/slideshow.editor.scss
+++ b/scss/slideshow.editor.scss
@@ -1,5 +1,15 @@
 /* External component(s) */
 .ghwp-editor-modal__content {
+    position: fixed;
+    overflow-y: auto;
+    left: 10vw;
+    right: 20vw;
+    top: 10vh;
+    bottom: 10vh;
+    border: 1px solid #ccc;
+    padding: 5vh 5vw;
+    background-color: #fff;
+    box-shadow: -7px 9px 48px 50px rgba(0, 0, 0, 0.15);
     z-index: 32 !important;
 
     > h2,
@@ -22,6 +32,17 @@
         button {
             font-size: 1em;
         }
+    }
+
+    .ghwp-editor-modal__close {
+        position: absolute;
+        top: 2em;
+        right: 2em;
+
+        .dashicons {
+            font-size: 2em;
+        }
+
     }
 }
 
@@ -174,7 +195,7 @@ $i: 0 !default;
 
     &__suboption {
         display: flex;
-        flex: 0 0 100%;
+        flex: 0 1 100%;
         padding: 1rem 0 0 4rem;
 
         .ghwp-miwi__icon svg {
@@ -182,5 +203,3 @@ $i: 0 !default;
         }
     }
 }
-
-
