--- a/scss/slideshow.scss
+++ b/scss/slideshow.scss
@@ -89,8 +89,10 @@ $slider-dots-bg: #fff !default;
     @import "slideshow-dots";
 
     figure {
+        align-items: center;
         margin: 0;
         display: flex;
+        flex-direction: column;
         justify-content: center;
         height: 100%;
 
@@ -105,8 +107,10 @@ $slider-dots-bg: #fff !default;
                 object-fit: contain;
             }
         }
+    }
 
-        figcaption {
+    &:not(.with-captions) {
+        figure figcaption {
             @include mixins.visuallyhidden;
         }
     }
